# 46750_assignment_2

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: CoalDailyPrices.csv  ETSDailyPrices.csv  GasDailyBalancingPrice.csv  appliance_params.json  pv_power_prod.csv  storage_params.json  wind_power_prod.csv
notebooks/: notebook.ipynb
src/: data_loader.py  data_preparation.py  deterministic_opt_model.py  main.py  main_deterministic.py  main_multi_stochastic.py  main_multijuice.py  main_stochastic.py  multi_stage_stochastic_opt_model.py  multistage_stochastic_opt_model.py  plotter.py  results.py  stochastic_opt_model.py  test_two_stage.py  two_stage_bby.py
src/graveyard/: main_multijuice.py  multistage_stochastic_opt_model.py
